--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.12",
-    "com.unity.ide.rider": "3.0.12",
-    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.collab-proxy": "1.15.18",
+    "com.unity.ide.rider": "3.0.14",
+    "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.0-pre.2",
+    "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
